<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_3_2_ff_showConfig"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str02Config" />

            <Button
                android:id="@+id/btn_3_3_ff_Protocol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str03Protocol" />

            <Button
                android:id="@+id/btn_3_4_ff_Format"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str04Format" />


            <Button
                android:id="@+id/btn_3_5_ff_Codec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str05Codec" />

            <Button
                android:id="@+id/btn_3_6_ff_Filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str06Filter" />

            <Button
                android:id="@+id/btn_3_7_abi_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str07abiInfo" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textShow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/black"
        android:ems="10"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

